tests/parser-test-files/bad-files/parse-match.2.error
error: Malformed match branch
  --> test:6:6
   |
 6 |      (y)))
   |        ^ expected body
